--- a/index.html
+++ b/index.html
@@ -1,22 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Sudoku</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="index.js"></script>
 </head>
+
 <body>
-    <table>
-       <tr></tr>
-       <tr></tr>
-       <tr></tr>
-       <tr></tr>
-       <tr></tr>
-       <tr></tr>
-       <tr></tr>
-       <tr></tr>
-       <tr></tr>
+    <table id="board">
+        <tr>
+            <td>
+                <table id="big1">
+                    <tr>
+                        <td id="cell0"></td>
+                        <td id="cell1"></td>
+                        <td id="cell2"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell3"></td>
+                        <td id="cell4"></td>
+                        <td id="cell5"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell6"></td>
+                        <td id="cell7"></td>
+                        <td id="cell8"></td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table id="big1">
+                    <tr>
+                        <td id="cell9"></td>
+                        <td id="cell10"></td>
+                        <td id="cell11"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell12"></td>
+                        <td id="cell13"></td>
+                        <td id="cell15"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell16"></td>
+                        <td id="cell17"></td>
+                        <td id="cell18"></td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table id="big1">
+                    <tr>
+                        <td id="cell19"></td>
+                        <td id="cell20"></td>
+                        <td id="cell21"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell22"></td>
+                        <td id="cell23"></td>
+                        <td id="cell24"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell25"></td>
+                        <td id="cell26"></td>
+                        <td id="cell27"></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <table id="big1">
+                    <tr>
+                        <td id="cell28"></td>
+                        <td id="cell29"></td>
+                        <td id="cell30"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell31"></td>
+                        <td id="cell32"></td>
+                        <td id="cell33"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell34"></td>
+                        <td id="cell35"></td>
+                        <td id="cell36"></td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table id="big1">
+                    <tr>
+                        <td id="cell37"></td>
+                        <td id="cell38"></td>
+                        <td id="cell39"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell40"></td>
+                        <td id="cell41"></td>
+                        <td id="cell42"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell0"></td>
+                        <td id="cell0"></td>
+                        <td id="cell0"></td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table id="big1">
+                    <tr>
+                        <td id="cell0"></td>
+                        <td id="cell0"></td>
+                        <td id="cell0"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell0"></td>
+                        <td id="cell0"></td>
+                        <td id="cell0"></td>
+                    </tr>
+                    <tr>
+                        <td id="cell0"></td>
+                        <td id="cell0"></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <table id="big1">
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table id="big1">
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table id="big1">
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
     </table>
 </body>
+
 </html>
